Version 0.2.5 - NOT RELEASED
 * changed name of configuration setting "overlap" to "overlap_percent"
   (you may need to change this name in your custom config files)

Version 0.2.4 - 2010-04-12
 * added a simple simulation mode for visualizing the material penetration of a toolpath
 * join tangential moves (removes the inner points in a colinear set of adjacent path points)
 * fixed careless import of Tkinter
 * added missing INSTALL.TXT to source package
 * fixed typo that breaks PyCAM for Python 2.6

Version 0.2.3 - 2010-04-05
 * GUI change: tool and process settings can be combined into tasks
 * store configured settings to a file in the user's home directory
 * added "material allowance" support for non-ODE calculations
 * added export of EMC2 tool definitions
 * added a warning dialog (GUI) for missing dependencies during startup (especially useful for Windows)
 * improved GUI for model scaling
 * allow to configure if the tool should move inside/along/around the boundary limits
 * fixed "overlap" calculation
 * prevent invalid input values (zero tool radius, ...)
 * fixed a bug that could rarely cause eternal loops of the PushCutter
 * reduced memory consumption of toolpaths for python 2.6 or above
 * disabled ODE as the default computation backend (due to this bug:
   http://sourceforge.net/tracker/?func=detail&aid=2973876&group_id=24884&atid=382799)

Version 0.2.2 - 2010-03-17
 * added a graphical installer for Windows (via distutils)
 * fixed broken commandline parameter "--template"
 * added workaround for ODE collision detection, that is broken under specific circumstances
 * fixed hang with PushCutter and ODE on Windows
 * fixed "division by zero" error in non-ODE mode
 * allow to disable ODE via commandline option
 * bugs fixed in cylindrical and toroidal cutter when using dropcutter on horizontal triangles
 * fixed "setup.py" for distutils packaging (contributed by Arthur Magill)

Version 0.2.1 - 2010-03-09